--- a/pub/css/multi-theme.css
+++ b/pub/css/multi-theme.css
@@ -46,6 +46,12 @@ input, textarea {
 input[type='checkbox'] {
     background: #c00;
 }
+.close-thread{
+	float:right;
+	padding-top: 0.32em;
+	padding-right:0.32em;
+}
+
 .site-name {
     color: #ff4646;
     font-size: 32px;
@@ -203,6 +209,7 @@ blockquote {
     font-family: monospace;
     background: #e2e2e2;
     border: 1px solid #caa;
+    display:inline-block;
 }
 .OPimg {
     margin: 0px 10px 10px 10px;
