--- a/pub/css/yotsuba.css
+++ b/pub/css/yotsuba.css
@@ -202,6 +202,7 @@ blockquote {
     font-family: monospace;
     background: #ffe;
     border: 1px solid #d9bfb7;
+    display:inline-block;
 }
 .OPimg {
     margin: 0px 10px 10px 10px;
